syntax = "proto3";

package thermalcamera;

option go_package = "github.com/JAremko/ctl-api-example/thermalcamera";

message Command {
    oneof command_type {
        SetZoomLevel set_zoom_level = 1;
        SetColorScheme set_color_scheme = 2;
    }
}

message SetZoomLevel {
    int32 level = 1;
}

message SetColorScheme {
    ColorScheme scheme = 1;
}

message StreamChargeResponse {
    int32 charge = 1; // Represented as percentage
}

enum ColorScheme {
    UNKNOWN = 0;
    SEPIA = 1;
    BLACK_HOT = 2;
    WHITE_HOT = 3;
}
